exports['api explore should accept buffer with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": 2999,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2316,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 2316
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "Buffer",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/2999 bytes (0.03%)"
    }
  ]
}

exports['api explore should accept buffers with js and map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": 718,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 35
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "Buffer",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/718 bytes (0.14%)"
    }
  ]
}

exports['api explore should generate data calculating gzip size 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 392,
      "mappedBytes": 510,
      "eolBytes": 1,
      "sourceMapCommentBytes": 55,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 300
        },
        "src/bar.js": {
          "size": 108
        },
        "src/foo.js": {
          "size": 102
        },
        "[sourceMappingURL]": {
          "size": 55
        },
        "[EOLs]": {
          "size": 1
        }
      }
    },
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 1576,
      "mappedBytes": 510,
      "eolBytes": 1,
      "sourceMapCommentBytes": 1208,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 300
        },
        "src/bar.js": {
          "size": 108
        },
        "src/foo.js": {
          "size": 102
        },
        "[sourceMappingURL]": {
          "size": 1208
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data excluding source map bytes 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 683,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    },
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 683,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2316,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/foo.min.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/683 bytes (0.15%)"
    },
    {
      "bundleName": "data/inline-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/683 bytes (0.15%)"
    }
  ]
}

exports['api explore should generate data respecting onlyMapped and replace options 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 718,
      "mappedBytes": 681,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 35
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data when provided with file with referenced map 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 718,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 35
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/foo.min.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/718 bytes (0.14%)"
    }
  ]
}

exports['api explore should generate data when provided with file with separated map file 1'] = {
  "bundles": [
    {
      "bundleName": "data/no-map-comment.js",
      "totalBytes": 682,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 0,
      "sourceMapCommentBytes": 0,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 0
        },
        "[unmapped]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/no-map-comment.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/682 bytes (0.15%)"
    }
  ]
}

exports['api explore should generate data when provided with js file with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 2999,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2316,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 2316
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/inline-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/2999 bytes (0.03%)"
    }
  ]
}

exports['api explore should give name to "null" source a name 1'] = {
  "bundles": [
    {
      "bundleName": "data/null-source.js",
      "totalBytes": 2641,
      "mappedBytes": 211,
      "unmappedBytes": 21,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2408,
      "files": {
        "webpack://source-map-explorer/tests/generate-data/src/bar.js": {
          "size": 40
        },
        "[no source]": {
          "size": 17
        },
        "webpack://source-map-explorer/tests/generate-data/src/foo.js": {
          "size": 38
        },
        "webpack://source-map-explorer/webpack/bootstrap": {
          "size": 109
        },
        "webpack://source-map-explorer/webpack/startup": {
          "size": 7
        },
        "[sourceMappingURL]": {
          "size": 2408
        },
        "[unmapped]": {
          "size": 21
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/null-source.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 21/2641 bytes (0.80%)"
    }
  ]
}

exports['api explore should sort bundles by name 1'] = {
  "bundles": [
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 2999,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2316,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 2316
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    },
    {
      "bundleName": "data/null-source.js",
      "totalBytes": 2641,
      "mappedBytes": 211,
      "unmappedBytes": 21,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2408,
      "files": {
        "webpack://source-map-explorer/tests/generate-data/src/bar.js": {
          "size": 40
        },
        "[no source]": {
          "size": 17
        },
        "webpack://source-map-explorer/tests/generate-data/src/foo.js": {
          "size": 38
        },
        "webpack://source-map-explorer/webpack/bootstrap": {
          "size": 109
        },
        "webpack://source-map-explorer/webpack/startup": {
          "size": 7
        },
        "[sourceMappingURL]": {
          "size": 2408
        },
        "[unmapped]": {
          "size": 21
        },
        "[EOLs]": {
          "size": 1
        }
      }
    },
    {
      "bundleName": "data/one-source.js",
      "totalBytes": 439,
      "mappedBytes": 55,
      "unmappedBytes": 3,
      "eolBytes": 5,
      "sourceMapCommentBytes": 376,
      "files": {
        "src/bar.js": {
          "size": 55
        },
        "[sourceMappingURL]": {
          "size": 376
        },
        "[unmapped]": {
          "size": 3
        },
        "[EOLs]": {
          "size": 5
        }
      }
    },
    {
      "bundleName": "data/with-unmapped.js",
      "totalBytes": 5183,
      "mappedBytes": 552,
      "unmappedBytes": 3253,
      "eolBytes": 72,
      "sourceMapCommentBytes": 1306,
      "files": {
        "../generate-data/src/with-unmapped.ts": {
          "size": 552
        },
        "[sourceMappingURL]": {
          "size": 1306
        },
        "[unmapped]": {
          "size": 3253
        },
        "[EOLs]": {
          "size": 72
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/with-unmapped.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 3253/5183 bytes (62.76%)"
    },
    {
      "bundleName": "data/one-source.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 3/439 bytes (0.68%)"
    },
    {
      "bundleName": "data/null-source.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 21/2641 bytes (0.80%)"
    },
    {
      "bundleName": "data/inline-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/2999 bytes (0.03%)"
    }
  ]
}

exports['api explore should sort filenames 1'] = {
  "bundles": [
    {
      "bundleName": "data/null-source.js",
      "totalBytes": 2641,
      "mappedBytes": 211,
      "unmappedBytes": 21,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2408,
      "files": {
        "[EOLs]": {
          "size": 1
        },
        "[no source]": {
          "size": 17
        },
        "[sourceMappingURL]": {
          "size": 2408
        },
        "[unmapped]": {
          "size": 21
        },
        "webpack://source-map-explorer/tests/generate-data/src/bar.js": {
          "size": 40
        },
        "webpack://source-map-explorer/tests/generate-data/src/foo.js": {
          "size": 38
        },
        "webpack://source-map-explorer/webpack/bootstrap": {
          "size": 109
        },
        "webpack://source-map-explorer/webpack/startup": {
          "size": 7
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/null-source.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 21/2641 bytes (0.80%)"
    }
  ]
}

exports['api explore when output format specified should generate JSON 1'] = `
{
  "results": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 718,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 35
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ]
}
`

exports['api explore when output format specified should generate TSV 1'] = `
Source\tSize\r
../../node_modules/browser-pack/_prelude.js\t480\r
src/bar.js\t104\r
src/foo.js\t97\r
[sourceMappingURL]\t35\r
[unmapped]\t1\r
[EOLs]\t1\r
\r
[sourceMappingURL]\t2316\r
../../node_modules/browser-pack/_prelude.js\t480\r
src/bar.js\t104\r
src/foo.js\t97\r
[unmapped]\t1\r
[EOLs]\t1
`
